--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,14 +1,15 @@
 <div class="main-container">
   <h1>Simple Google Sheet Gui for crewAI</h1>
 
-  <!-- Conditionally display the username if the user is logged in -->
-  <p *ngIf="isLoggedIn(); else notLoggedIn">{{ username }}</p>
-
-  <ng-template #notLoggedIn>
-    <p>You are not logged in.</p>
-  </ng-template>
-
-  <!-- Buttons inline and styled differently if not logged in -->
+  @if(isLoggedIn()){
+  <p>{{ username }}</p>
+  }@else{
+  <p>You are not logged in.</p>
+  } @if(selectedCrewName){
+  <div class="selected-crew-name">
+    <p>Selected Crew: {{ selectedCrewName }}</p>
+  </div>
+  }
   <div class="buttons-container">
     <div
       class="load-crew-container"
@@ -25,18 +26,22 @@
         <i class="fas fa-folder-open"></i> Load Crew
       </button>
 
-      <!-- Crew list appears when hovering over Load Crew button or the list itself -->
-      <div *ngIf="hovered && isLoggedIn()" class="crew-list">
-        <ul *ngIf="crews.length > 0; else noCrews">
-          <li *ngFor="let crew of crews" (click)="viewAgents(crew.id)">
+      @if(hovered && isLoggedIn()){
+      <div class="crew-list">
+        @if(crews.length > 0){
+        <ul>
+          @for(crew of crews; track crew.id){
+          <li (click)="viewAgents(crew.id)">
             <span class="crew-name">{{ crew.name }}</span>
             <i class="fas fa-arrow-right"></i>
           </li>
+          }
         </ul>
-        <ng-template #noCrews>
-          <p>No crews available</p>
-        </ng-template>
+        }@else{
+        <p>No crews available</p>
+        }
       </div>
+      }
     </div>
 
     <button
@@ -50,13 +55,15 @@
       <i class="fas fa-plus-circle"></i> Create Crew
     </button>
 
-    <!-- Delete Crew Button, only visible when a crew is selected -->
-    <button *ngIf="crewId !== null" class="delete-crew" (click)="deleteCrew()">
+    @if(crewId !== null){
+    <button class="delete-crew" (click)="deleteCrew()">
       <i class="fas fa-trash-alt"></i> Delete Crew
     </button>
+    }
   </div>
 
-  <div class="main-page-container" *ngIf="crewId">
+  @if(crewId){
+  <div class="main-page-container">
     <div class="navigation-tabs">
       <a [routerLink]="['/crew', crewId, 'agents']" routerLinkActive="active"
         >Agents</a
@@ -67,6 +74,7 @@
     </div>
     <router-outlet></router-outlet>
   </div>
-  <!-- Kickoff button, only enabled if conditions are met -->
+  }
+
   <button (click)="navigateToKickoff()" class="kickoff-btn">Kickoff</button>
 </div>
