--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -10,7 +10,7 @@
     <p>Selected Crew: {{ selectedCrewName }}</p>
   </div>
   }
-  
+
   <div class="buttons-container">
     <div
       class="load-crew-container"
@@ -29,9 +29,9 @@
 
       @if(hovered && isLoggedIn()){
       <div class="crew-list">
-        @if(crews.length > 0){
+        @if(crews().length > 0){
         <ul>
-          @for(crew of crews; track crew.id){
+          @for(crew of crews(); track crew.id ){
           <li (click)="viewAgents(crew.id)">
             <span class="crew-name">{{ crew.name }}</span>
             <i class="fas fa-arrow-right"></i>
@@ -55,7 +55,16 @@
     >
       <i class="fas fa-plus-circle"></i> Create Crew
     </button>
-    <button [routerLink]="['/kickoff']" class="kickoff-btn">Kickoff</button>
+    <button
+      [routerLink]="['/kickoff']"
+      [ngClass]="{
+        'not-logged-in': !isLoggedIn(),
+        'kickoff-btn': isLoggedIn()
+      }"
+      [disabled]="!isLoggedIn()"
+    >
+      Kickoff
+    </button>
 
     @if(crewId !== null){
     <button class="delete-crew" (click)="deleteCrew()">
@@ -65,7 +74,7 @@
   </div>
 
   @if(crewId){
-  <div class="main-page-container">
+  <div class="main-page-table-container">
     <div class="navigation-tabs">
       <a [routerLink]="['/crew', crewId, 'agents']" routerLinkActive="active"
         >Agents</a
@@ -74,7 +83,7 @@
         >Tasks</a
       >
     </div>
-    <router-outlet></router-outlet>
   </div>
   }
+  <router-outlet></router-outlet>
 </div>
