--- a/src/app/main-page/agents/create-agent/create-agent.component.html
+++ b/src/app/main-page/agents/create-agent/create-agent.component.html
@@ -33,8 +33,8 @@
     <div class="form-group">
       <label for="goal">Goal</label>
       <input id="goal" type="text" formControlName="goal" />
-      @if(agentForm.get('goal')?.invalid && agentForm.get('goal')?.touched){
 
+      @if(agentForm.get('goal')?.invalid && agentForm.get('goal')?.touched){
       <div class="error">
         <small
           >Goal is required, must be at least 5 characters long, must contain
@@ -47,9 +47,9 @@
     <div class="form-group">
       <label for="backstory">Backstory</label>
       <textarea id="backstory" formControlName="backstory"></textarea>
+
       @if(agentForm.get('backstory')?.invalid &&
       agentForm.get('backstory')?.touched){
-
       <div class="error">
         <small
           >Backstory is required, must be at least 10 characters long, must
@@ -70,11 +70,11 @@
     <div class="form-group">
       <label for="tool">Tool</label>
       <select id="tool" formControlName="tool">
-        <option value="some_tool1">crewAI Tool 1</option>
-        <option value="some_tool2">crewAI Tool 2</option>
-        <option value="some_tool3">crewAI Tool 3</option>
-        <option value="some_tool4">crewAI Tool 4</option>
-        <option value="some_tool5">crewAI Tool 5</option>
+        <option value="crewAI Tool 1">crewAI Tool 1</option>
+        <option value="crewAI Tool 2">crewAI Tool 2</option>
+        <option value="crewAI Tool 3">crewAI Tool 3</option>
+        <option value="crewAI Tool 4">crewAI Tool 4</option>
+        <option value="crewAI Tool 5">crewAI Tool 5</option>
       </select>
     </div>
 
