--- a/src/app/main-page/agents/table-agents/table-agents.component.css
+++ b/src/app/main-page/agents/table-agents/table-agents.component.css
@@ -54,26 +54,14 @@
   width: 1em;
 }
 
-.agents-table th:nth-child(1),
-.agents-table td:nth-child(1) {
-  width: 3em;
+.name {
+  width: 10em;
 }
-
 .backstory {
   width: 25em;
 }
 
-.agents-table th:nth-child(3),
-.agents-table td:nth-child(3) {
-  width: 25em;
-}
-
 .role {
-  width: 8em;
-}
-
-.agents-table th:nth-child(4),
-.agents-table td:nth-child(4) {
   width: 8em;
 }
 
