--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
   <div class="menu">
     @if(!getUser()){
     <div>
-      <div routerLink="" class="menu-item">
+      <div routerLink="/" class="menu-item">
         <div class="menu-icon home">
           <i class="fa fa-home"></i>
         </div>
